--- a/.env
+++ b/.env
@@ -11,3 +11,9 @@ GOOGLE_CLIENT_SECRET = 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
 
 NEXT_AUTH_URL=http://localhost:3000/api
 NEXTAUTH_SECRET=jFRxhoOEjWY1m4Qctwertc
+
+SPACE_ACCESS_KEY_ID=DO00BX6U2YZKFXU2TWJV 
+SPACE_SECRET_ACCESS_KEY=5A+pO5sUMFDmQRM+ShiexPyx7ZpMwM3M0zvTlEtHLGM 
+SPACE_ENDPOINT=https://sgp1.digitaloceanspaces.com/
+
+OPRDER_APP_URL = http://localhost:3000/order
