--- a/.env
+++ b/.env
@@ -6,6 +6,8 @@
 
 DATABASE_URL="postgresql://postgres:dbpassword@localhost:5432/foodie-pos?schema=public"
 NEXT_PUBLIC_API_BASE_URL = http://localhost:3000/api
+NEXT_PUBLIC_BACKOFFICE_API_URL = http://localhost:3000/api/backoffice
+NEXT_PUBLIC_ORDER_API_URL = http://localhost:3000/api/order
 GOOGLE_CLIENT_ID = 975384830171-f407r7pjcir4gpg9okn64t10b1cocrem.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
 
