--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.13",
-    "@mui/material": "^5.14.13",
+    "@mui/lab": "^5.0.0-alpha.154",
+    "@mui/material": "^5.14.19",
     "@prisma/client": "^5.4.2",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/multer": "^1.4.10",
@@ -20,6 +21,7 @@
     "@types/react-redux": "^7.1.27",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "nanoid": "^5.0.3",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
     "qrcode": "^1.5.3",
